resources/test/docker/04/iptables/expected-iptables-v4.txt
*filter
:DFWRS_FORWARD - [0:0]
:DFWRS_INPUT - [0:0]
:FORWARD - [0:0]
:INPUT - [0:0]
-F DFWRS_FORWARD
-A DFWRS_FORWARD -m state --state INVALID -j DROP
-A DFWRS_FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-F DFWRS_INPUT
-A DFWRS_INPUT -m state --state INVALID -j DROP
-A DFWRS_INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A DFWRS_INPUT -i $input=bridge -j REJECT
-A DFWRS_INPUT -s $src_ip=ip -i $input=bridge -m state --state RELATED -j ACCEPT
-A DFWRS_INPUT -i $input=bridge -j DROP
-A DFWRS_INPUT -i $input=bridge -j DROP
-A DFWRS_INPUT -i $input=bridge -j DROP
-A DFWRS_INPUT -i $input=bridge -j DROP
-A FORWARD -j DFWRS_FORWARD
-A INPUT -j DFWRS_INPUT
COMMIT
*nat
:DFWRS_POSTROUTING - [0:0]
:DFWRS_PREROUTING - [0:0]
:POSTROUTING - [0:0]
:PREROUTING - [0:0]
-F DFWRS_POSTROUTING
-F DFWRS_PREROUTING
-A POSTROUTING -j DFWRS_POSTROUTING
-A PREROUTING -j DFWRS_PREROUTING
COMMIT
